Add measurement user assignment (#8)
* Add measurement user assignment

* Add user management endpoints

* Add frontend user management

* Extract user list item

* Improve measurement actions and navigation

* chore: format
